# matcher-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile.bot  Dockerfile.service  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  service-runner.py
api/: service_runner.py
api/frontend/: filter_page.html
app/: commands.py  routers.py  text.py
app/business/: alert_service.py  dating_service.py  filter_service.py  menu_service.py  profile_service.py  search_service.py
app/filters/: create_profile_filtres.py
app/handlers/: __init__.py
app/handlers/admin/: admin.py  ban.py  stats.py
app/middlewares/: __init__.py  common.py  daily_streak.py  dating.py  log.py  offer_check.py
app/states/: default.py
app/utils/: reply_texts.py
bot/: bot_runner.py  loader.py
bot/app/: commands.py  text.py
bot/database/: connect.py
bot/utils/: graphs.py  logging.py
caddy/: Caddyfile.local  Dockerfile
data/: config.py
data/locales/: bot.pot
database/migrations/: env.py
database/models/: __init__.py  balance_entry.py  balance_top_up.py  balance_usage.py  city.py  enums.py  ethnicity.py  filter.py  marital_status.py  profile.py  religion.py  user.py  viewed_profile.py
database/seed/: ai_guess.py  city.py  fake_users.py  seed.py  update_seed.py
database/services/: __init__.py  balance.py  balance_top_up.py  balance_usage.py  city.py  ethnicity.py  filter.py  marital_status.py  match.py  profile.py  religion.py  search.py  stats.py  user.py  viewed_profile.py
docker/caddy/: Caddyfile.prod  Dockerfile
frontend/: .gitignore  README.md  filter_page.html  index.html  profile_page.html  script.js  server.py  start.sh  styles.css
frontend/static/: script.js  styles.css
migrations/: init_001.sql
static/: script.js  styles.css
utils/: geopy.py  graphs.py  logging.py
(+91 files in other folders)
